# fakeit-rest

./: .gitignore  .pre-commit-config.yaml  README.md  api.py  app.py  faker_data_generation_service.py  field_generators.py  pyproject.toml  websocket_client.py  websocket_endpoint.py  websocket_handler.py  websocket_router.py
models/: models.py
tests/: test_api.py  test_faker_data_generation_service.py
utilities/: helpers.py
