[tool.poetry]
name = "fakeit-rest"
version = "0.1.0"
description = ""
authors = ["Farman Pirzada <farmann.pirz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Faker = "^30.8.0"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
PyYAML = "^6.0.2"
httpx = "^0.27.2"
asyncio = "^3.4.3"
python-multipart = "^0.0.12"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"