[tool.poetry]
name = "fakeit-rest"
version = "0.1.0"
description = ""
authors = ["Farman Pirzada <farmann.pirz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^30.8.0"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
PyYAML = "^6.0.2"
httpx = "^0.27.2"
python-multipart = "^0.0.12"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"
pylint = "^2.10.2"
pre-commit = "^2.14.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = ["app", "tests"]
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
