[tool.poetry]
name = "fakeit-rest"
version = "0.1.0"
description = ""
authors = ["Farman Pirzada <farmann.pirz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^30.8.0"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
PyYAML = "^6.0.2"
httpx = "^0.27.2"
python-multipart = "^0.0.12"
slowapi = "^0.1.9"
websockets = "11.0"
hypercorn = "^0.17.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
flake8 = "^6.0.0"
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"
pylint = "^2.10.2"
pre-commit = "^2.14.0"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.flake8]
max-line-length = 120
ignore = ["E501", "E203"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = ["."]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
allow_untyped_globals = true
strict_optional = false
warn_unused_ignores = false
warn_no_return = false
follow_imports = "skip"
follow_imports_for_stubs = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
